# dare

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
include/: block.h  blockchain.h  merkle.h  persistence.h  transaction.h  wallet.h
src/: block.rs  blockchain.rs  lib.rs  main.cpp  main.rs  merkle.rs  message.rs  network.rs  persistence.rs  transaction.rs  wallet.rs
tests/: test_validation.cpp  validation.rs
